# arena-api

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml
.github/workflows/: deploy.yml
arena_api/: config.py  crypto.py  db.py  elo.py  eval.py  main.py  mock_endpoint.py  models.py  schemas.py
data/holdouts/: text.jsonl
docs/: THREAT_MODEL.md
scripts/: encrypt_holdouts.py
