[project]
name = "arena-api"
version = "0.0.1"
description = "Arena backend — eval runner, leaderboard, bounties."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlmodel>=0.0.22",
  "httpx>=0.27",
  "anthropic>=0.40",
  "pydantic-settings>=2.5",
  "python-multipart>=0.0.12",
  "cryptography>=43.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arena_api*"]
